err/anybox.recipe.openerp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anybox'...
Listing './lib/python3.5/site-packages/anybox/recipe'...
Listing './lib/python3.5/site-packages/anybox/recipe/openerp'...
Compiling './lib/python3.5/site-packages/anybox/recipe/openerp/base.py'...
***   File "./lib/python3.5/site-packages/anybox/recipe/openerp/base.py", line 316
    except UserError, exc:  # happens only for zc.buildout >= 2.0
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anybox/recipe/openerp/runtime'...
Listing './lib/python3.5/site-packages/anybox/recipe/openerp/runtime/backports'...
Listing './lib/python3.5/site-packages/anybox/recipe/openerp/runtime/backports/cli'...
Compiling './lib/python3.5/site-packages/anybox/recipe/openerp/runtime/patch_openerp_v5.py'...
***   File "./lib/python3.5/site-packages/anybox/recipe/openerp/runtime/patch_openerp_v5.py", line 106
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anybox/recipe/openerp/runtime/tests'...
Listing './lib/python3.5/site-packages/anybox/recipe/openerp/tests'...
Listing './lib/python3.5/site-packages/anybox/recipe/openerp/vcs'...
Compiling './lib/python3.5/site-packages/anybox/recipe/openerp/vcs/base.py'...
***   File "./lib/python3.5/site-packages/anybox/recipe/openerp/vcs/base.py", line 30
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anybox/recipe/openerp/vcs/tests'...
Listing './lib/python3.5/site-packages/anybox.recipe.openerp-1.9.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
